2022-02-11 Franz Holzinger <franz@ttproducts.de>
    * bugfix: PHP 7.4 exception must contain the variable name

2022-02-09 Franz Holzinger <franz@ttproducts.de>
    * bugfix: PHP 8 and PHP 7.4

2022-01-19 Franz Holzinger <franz@ttproducts.de>
    * bugfix: The file GlobalDebugFunctions.php must not check if fh_debug has been installed. The Extension Manager is not yet initialized in the beginning.

2022-01-18 Franz Holzinger <franz@ttproducts.de>
    * bugfix: PHP 8

2022-01-12 Franz Holzinger <franz@ttproducts.de>
    * bugfix: PHP 8
    * new feature: Add ErrorHandler debugger which must be activated in the file LocalConfiguration.php.

2022-01-11 Franz Holzinger <franz@ttproducts.de>
    * It should still work with TYPO3 10.4 and PHP 7.4 as well.
    * Remove outdated code like the class CoreHooks.

2022-01-10 Franz Holzinger <franz@ttproducts.de>
    * remove ExtDirectRouter

2022-01-06 Franz Holzinger <franz@ttproducts.de>
    * new requirement: PHP 8

2021-10-28 Franz Holzinger <franz@ttproducts.de>
    * compatibility with TYPO3 11.5

2021-06-12 Franz Holzinger <franz@ttproducts.de>
    * Add a 3rd parameter 'F' to force the debug output for internal debug calls.

2021-02-09 Franz Holzinger <franz@ttproducts.de>
    * remove feature: The Content-Security-Policy in this file cannot supersede the .htaccess files. So it makes no sense to add it here.

2021-02-06 Franz Holzinger <franz@ttproducts.de>
    * bugfix: The HTML table header tag th for an array variable must have 2 columns. The first column is the header title, the second is empty and stands for the variable content.
    * new feature: Add a header meta tag for Content-Security-Policy.

2021-02-05 Franz Holzinger <franz@ttproducts.de>
    * bugfix: The debug file must be written sometimes inside of a subdirectory below Apache root.

2021-01-05 Franz Holzinger <franz@ttproducts.de>